--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -607,6 +607,118 @@
     </section>
     <!-- End Counts Section  -->
 
+ <!-- Recent Posts Section -->
+ <section id="recent-posts" class="recent-posts section">
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Articles et actualités récentes</h2>
+    <p>Decouvrez des atuces pour boostez vos compétences</p>
+  </div>
+  <!-- End Section Title -->
+
+  <div class="container">
+
+    <div class="row gy-5">
+
+      <div class="col-xl-4 col-md-6">
+        <div class="post-item position-relative h-100" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="post-img position-relative overflow-hidden">
+            <img src="https://renewmyself.org/wp-content/uploads/2015/11/5reasonsesl.jpg" class="img-fluid" alt="">
+            <span class="post-date">Décembre 07</span>
+          </div>
+
+          <div class="post-content d-flex flex-column">
+
+            <h3 class="post-title">Apprendre l’anglais dès le plus jeune âge: Un cadeau pour l’avenir de vos enfants</h3>
+
+            <div class="meta d-flex align-items-center">
+              <div class="d-flex align-items-center">
+                <i class="bi bi-person"></i> <span class="ps-2">Roger BONZI</span>
+              </div>
+              <span class="px-3 text-black-50">/</span>
+              <div class="d-flex align-items-center">
+                <i class="bi bi-folder2"></i> <span class="ps-2">English Learning</span>
+              </div>
+            </div>
+
+            <hr>
+
+            <a href="/blog/news-1" class="readmore stretched-link"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+
+          </div>
+
+        </div>
+      </div><!-- End post item -->
+
+      <div class="col-xl-4 col-md-6">
+        <div class="post-item position-relative h-100" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="post-img position-relative overflow-hidden">
+            <img src="https://static.wixstatic.com/media/11062b_77ffb3c6e83947c3ad6b9217e90b2061~mv2.jpg/v1/fill/w_528,h_352,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Image-empty-state.jpg" class="img-fluid" alt="">
+            <span class="post-date">July 17</span>
+          </div>
+
+          <div class="post-content d-flex flex-column">
+
+            <h3 class="post-title">Et repellendus molestiae qui est sed omnis</h3>
+
+            <div class="meta d-flex align-items-center">
+              <div class="d-flex align-items-center">
+                <i class="bi bi-person"></i> <span class="ps-2">Mario Douglas</span>
+              </div>
+              <span class="px-3 text-black-50">/</span>
+              <div class="d-flex align-items-center">
+                <i class="bi bi-folder2"></i> <span class="ps-2">Sports</span>
+              </div>
+            </div>
+
+            <hr>
+
+            <a href="blog-details.html" class="readmore stretched-link"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+
+          </div>
+
+        </div>
+      </div><!-- End post item -->
+
+      <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="post-item position-relative h-100">
+
+          <div class="post-img position-relative overflow-hidden">
+            <img src="https://glctschool.com/wp/wp-content/uploads/2023/04/April-26-private-school.jpg" class="img-fluid" alt="">
+            <span class="post-date">September 05</span>
+          </div>
+
+          <div class="post-content d-flex flex-column">
+
+            <h3 class="post-title">Quia assumenda est et veritati tirana ploder</h3>
+
+            <div class="meta d-flex align-items-center">
+              <div class="d-flex align-items-center">
+                <i class="bi bi-person"></i> <span class="ps-2">Lisa Hunter</span>
+              </div>
+              <span class="px-3 text-black-50">/</span>
+              <div class="d-flex align-items-center">
+                <i class="bi bi-folder2"></i> <span class="ps-2">Economics</span>
+              </div>
+            </div>
+
+            <hr>
+
+            <a href="blog-details.html" class="readmore stretched-link"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+
+          </div>
+
+        </div>
+      </div><!-- End post item -->
+
+    </div>
+
+  </div>
+
+</section><!-- /Recent Posts Section -->
+
 
     <!-- Partners section-->
     <!-- Slider main container -->
