--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer id="footer" class="main-footer">
   <div class="top-footer-line">
-    <p>ALL is commited to provide better language learning experience in Africa</p>
+    <p>La principale plateforme pour le renforcement des compétences linguistiques et de leadership</p>
   </div>
   <div class="px-5">
     <div class="footer-content">
