--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -617,9 +617,7 @@
   <!-- End Section Title -->
 
   <div class="container">
-
     <div class="row gy-5">
-
       <div class="col-xl-4 col-md-6">
         <div class="post-item position-relative h-100" data-aos="fade-up" data-aos-delay="100">
 
@@ -629,87 +627,74 @@
           </div>
 
           <div class="post-content d-flex flex-column">
-
             <h3 class="post-title">Apprendre l’anglais dès le plus jeune âge: Un cadeau pour l’avenir de vos enfants</h3>
 
             <div class="meta d-flex align-items-center">
               <div class="d-flex align-items-center">
-                <i class="bi bi-person"></i> <span class="ps-2">Roger BONZI</span>
+                <i class="bi bi-person"></i> <span class="ps-2">Nipomoussi R. BONZI</span>
               </div>
               <span class="px-3 text-black-50">/</span>
               <div class="d-flex align-items-center">
-                <i class="bi bi-folder2"></i> <span class="ps-2">English Learning</span>
+                <i class="bi bi-folder2"></i> <span class="ps-2">Anglais</span>
               </div>
             </div>
-
             <hr>
-
-            <a href="/blog/news-1" class="readmore stretched-link"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
-
+            <a href="/blog/news-1" class="readmore stretched-link"><span>Lire cet article</span><i class="bi bi-arrow-right"></i></a>
           </div>
-
         </div>
-      </div><!-- End post item -->
+      </div>
+      <!-- End post item -->
 
       <div class="col-xl-4 col-md-6">
         <div class="post-item position-relative h-100" data-aos="fade-up" data-aos-delay="200">
 
           <div class="post-img position-relative overflow-hidden">
             <img src="https://static.wixstatic.com/media/11062b_77ffb3c6e83947c3ad6b9217e90b2061~mv2.jpg/v1/fill/w_528,h_352,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Image-empty-state.jpg" class="img-fluid" alt="">
-            <span class="post-date">July 17</span>
+            <span class="post-date"> 10 Juin</span>
           </div>
 
           <div class="post-content d-flex flex-column">
-
-            <h3 class="post-title">Et repellendus molestiae qui est sed omnis</h3>
+            <h3 class="post-title">Sept (07) expressions anglaises indispensables pour briller en milieu professionnel</h3>
 
             <div class="meta d-flex align-items-center">
               <div class="d-flex align-items-center">
-                <i class="bi bi-person"></i> <span class="ps-2">Mario Douglas</span>
+                <i class="bi bi-person"></i> <span class="ps-2">Ismael ZERBO</span>
               </div>
               <span class="px-3 text-black-50">/</span>
               <div class="d-flex align-items-center">
-                <i class="bi bi-folder2"></i> <span class="ps-2">Sports</span>
+                <i class="bi bi-folder2"></i> <span class="ps-2">Anglais</span>
               </div>
             </div>
 
             <hr>
-
-            <a href="blog-details.html" class="readmore stretched-link"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
-
+            <a href="/blog/news-2" class="readmore stretched-link"><span>Lire cet article</span><i class="bi bi-arrow-right"></i></a>
           </div>
-
         </div>
-      </div><!-- End post item -->
+      </div>
+      <!-- End post item -->
 
       <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
         <div class="post-item position-relative h-100">
 
           <div class="post-img position-relative overflow-hidden">
-            <img src="https://glctschool.com/wp/wp-content/uploads/2023/04/April-26-private-school.jpg" class="img-fluid" alt="">
-            <span class="post-date">September 05</span>
+            <img src="https://images.unsplash.com/photo-1558413203-528a11565bf4?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="">
+            <span class="post-date">05 Septembre</span>
           </div>
-
           <div class="post-content d-flex flex-column">
-
-            <h3 class="post-title">Quia assumenda est et veritati tirana ploder</h3>
+            <h3 class="post-title">Comment garder un bon niveau d’Anglais après une formation à l’étranger</h3>
 
             <div class="meta d-flex align-items-center">
               <div class="d-flex align-items-center">
-                <i class="bi bi-person"></i> <span class="ps-2">Lisa Hunter</span>
+                <i class="bi bi-person"></i> <span class="ps-2">Ismael ZERBO</span>
               </div>
               <span class="px-3 text-black-50">/</span>
               <div class="d-flex align-items-center">
-                <i class="bi bi-folder2"></i> <span class="ps-2">Economics</span>
+                <i class="bi bi-folder2"></i> <span class="ps-2">Anglais</span>
               </div>
             </div>
-
             <hr>
-
-            <a href="blog-details.html" class="readmore stretched-link"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
-
+            <a href="/blog/news-3" class="readmore stretched-link"><span>Lire cet article</span><i class="bi bi-arrow-right"></i></a>
           </div>
-
         </div>
       </div><!-- End post item -->
 
