--- a/views/news/blog-1.ejs
+++ b/views/news/blog-1.ejs
@@ -1,5 +1,23 @@
 <% layout('layouts/boilerplate') %>
+<style>
 
+.news-background {
+    background: url("https://images.pexels.com/photos/10565669/pexels-photo-10565669.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+    height: 60vh;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center center;
+    position: relative;
+    /* background-attachment: fixed; */
+    background-repeat: no-repeat;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+</style>
 <meta property="og:image" content="https://images.pexels.com/photos/5895034/pexels-photo-5895034.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" />
 
 <meta content="Apprendre l’anglais dès le plus jeune âge: Un cadeau pour l’avenir de vos enfants" name="description">
@@ -33,7 +51,7 @@
 									<div class="meta-top">
 										<ul>
 											<li class="d-flex align-items-center"><i class="bi bi-person"></i>
-												<span>Roger BONZI</span>
+												<span>Nipomoussi Roger BONZI</span>
 											</li>
 											<li class="d-flex align-items-center"><i class="bi bi-clock"></i> <span>07
 													Décembre 2024</span></li>
@@ -332,7 +350,7 @@
 										<img src="https://img.freepik.com/free-vector/smiling-young-man-illustration_1308-174669.jpg"
 											class="rounded-circle flex-shrink-0" alt="">
 										<div>
-											<h4>Roger BONZI</h4>
+											<h4>Nipomoussi Roger BONZI</h4>
 											<div class="social-links">
 												<a href="https://x.com/#"><i class="bi bi-twitter-x"></i></a>
 												<a href="https://facebook.com/#"><i class="bi bi-facebook"></i></a>
@@ -352,7 +370,6 @@
 								</div>
 
 							</div>
-
 
 				<!-- Call to action -->
 					<div>
