author widget design

--- a/views/news/blog-2.ejs
+++ b/views/news/blog-2.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
  <style>
   .news-background {
-   background: url("https://images.pexels.com/photos/10565669/pexels-photo-10565669.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+   background: url("https://images.pexels.com/photos/1367271/pexels-photo-1367271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
    height: 60vh;
    background-size: cover;
    -webkit-background-size: cover;
@@ -58,7 +58,7 @@
          <div class="meta-top">
           <ul>
            <li class="d-flex align-items-center"><i class="bi bi-person"></i>
-            <span>Ismael ZERBO</span>
+            <span>Chantal BONKOUNGOU</span>
            </li>
            <li class="d-flex align-items-center"><i class="bi bi-clock"></i> <span>10
              Juin 2024</span></li>
@@ -128,6 +128,9 @@
            strategy.”<br>
            Parfaite pour insister sur l’importance de démarrer une initiative rapidement.
           </p>
+
+          <img src="https://images.pexels.com/photos/9489084/pexels-photo-9489084.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+          class="img-fluid" alt="">
           <!-- 5 -->
           <p>
            <span class="key-point"> 5 </span> <span class="word">Let’s circle back</span>
@@ -138,8 +141,7 @@
            <span class="exemple-concret">Exemple :</span> “We’ll circle back to this issue after the meeting.” <br>
            Cette phrase montre que vous savez gérer les priorités tout en gardant le cap.
           </p>
-          <img src="https://images.pexels.com/photos/9489084/pexels-photo-9489084.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-           class="img-fluid" alt="">
+        
           <p>
 
            <!-- 6 -->
@@ -393,23 +395,23 @@
        <!-- Blog Author Widget -->
        <div class="blog-author-widget widget-item">
         <div class="d-flex flex-column align-items-center">
-         <div class="d-flex align-items-center w-100">
-          <img src="https://img.freepik.com/free-vector/smiling-young-man-illustration_1308-174669.jpg"
-           class="rounded-circle flex-shrink-0" alt="">
+          <img  src="https://res.cloudinary.com/dccibzcxp/image/upload/v1733855834/Afro%20Language%20lab/Chantal_htd6pi.jpg"
+          class="author-img mb-3 flex-shrink-0" alt="">
+         <div class="d-flex align-items-center justify-content-around w-100">
+          <h4>Chantal BONKOUNGOU</h4>
+          <div class="social-links">
+           <a href="https://x.com/#" target="_blank"><i class="bi bi-twitter-x"></i></a>
+           <a href="https://facebook.com/#" target="_blank"><i class="bi bi-facebook"></i></a>
+           <a href="https://instagram.com/#" target="_blank"><i class="biu bi-instagram"></i></a>
+           <a href="https://instagram.com/#" target="_blank"><i class="biu bi-linkedin"></i></a>
+          </div>
           <div>
-           <h4>Ismael ZERBO</h4>
-           <div class="social-links">
-            <a href="https://x.com/#" target="_blank"><i class="bi bi-twitter-x"></i></a>
-            <a href="https://facebook.com/#" target="_blank"><i class="bi bi-facebook"></i></a>
-            <a href="https://instagram.com/#" target="_blank"><i class="biu bi-instagram"></i></a>
-            <a href="https://instagram.com/#" target="_blank"><i class="biu bi-linkedin"></i></a>
-           </div>
           </div>
          </div>
+         <p id="author-about">À propos de l'auteur</p>
          <p>
-          ESL Coach expérimenté et passionné, spécialisé dans l’enseignement de l’anglais comme seconde langue à des apprenants de divers horizons. Je suis reconnu pour ma capacité à créer des environnements d’apprentissage engageants, en favorisant la confiance en soi et l’expression orale.
+          Jeune et dynamique, enseignante d’anglais passionnée par la transmission du savoir et l’accompagnement des apprenants dans leur maîtrise de la langue. Avec une approche interactive et moderne, elle s’efforce de rendre chaque cours captivant et motivant, en favorisant la participation active des élèves et le développement de leur confiance en eux.
          </p>
-
         </div>
 
        </div>
