--- a/views/news/blog-3.ejs
+++ b/views/news/blog-3.ejs
@@ -19,7 +19,7 @@
  </style>
 
  <meta property="og:image"
-  content="https://images.pexels.com/photos/5895034/pexels-photo-5895034.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" />
+  content="https://images.pexels.com/photos/19579986/pexels-photo-19579986/free-photo-of-students-sitting-at-graduation-ceremony.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" />
 
  <meta content="Comment garder un bon niveau d’Anglais après une formation à l’étranger" name="description">
 
@@ -403,12 +403,10 @@
        <!--/Blog Author Widget -->
        <!-- Blog Author Widget -->
        <div class="blog-author-widget widget-item">
-
         <div class="d-flex flex-column align-items-center">
-         <div class="d-flex align-items-center w-100">
-          <img src="https://img.freepik.com/free-vector/smiling-young-man-illustration_1308-174669.jpg"
-           class="rounded-circle flex-shrink-0" alt="">
-          <div>
+         <img src="https://res.cloudinary.com/dccibzcxp/image/upload/v1717731732/Screenshot_2024-06-07_at_03.42.10_fgo1px.png"
+           class="author-img flex-shrink-0 mb-3" alt="">
+         <div class="d-flex align-items-center justify-content-around w-100">
            <h4>Ismael ZERBO</h4>
            <div class="social-links">
             <a href="https://x.com/#"><i class="bi bi-twitter-x"></i></a>
@@ -416,14 +414,13 @@
             <a href="https://instagram.com/#"><i class="biu bi-instagram"></i></a>
             <a href="https://instagram.com/#"><i class="biu bi-linkedin"></i></a>
            </div>
-          </div>
-         </div>
-         <p>
-          ESL Coach expérimenté et passionné, spécialisé dans l’enseignement de l’anglais comme seconde langue à des apprenants de divers horizons. Je suis reconnu pour ma capacité à créer des environnements d’apprentissage engageants, en favorisant la confiance en soi et l’expression orale.
-         </p>
-
         </div>
-
+         </div>
+         <p id="author-about">À propos de l'auteur</p>
+         <p>
+          ESL Coach expérimenté et passionné, spécialisé dans l’enseignement de l’anglais comme seconde langue à des apprenants de divers horizons. Il est reconnu pour sa capacité à créer des environnements d’apprentissage engageants, en favorisant la confiance en soi et l’expression orale.
+         </p>
+        </div>
        </div>
 
 
@@ -436,11 +433,9 @@
             <div class="CTA-card-body ps-4 py-3">
              <h3 class="CTA-card-title">Afro Pro English Zone</h3>
              <h5 class="card-subtitle mb-2 text-muted"><small>Le programme qui rend les professionnel(e)s totalement bilingues </small></h5>
-
              <div class="my-3">
               <a href="/englishlang4all/clubs/home" class="btn-cta">En savoir plus</a>
              </div>
-
             </div>
            </div>
           </div>
