--- a/public/assets/css/blog.css
+++ b/public/assets/css/blog.css
@@ -17,7 +17,7 @@ html {
     /* max-width: 640px; */
     
     margin: auto;
-    margin-top: 160px;
+    margin: 60px 0;
     /* height: 270px; */
     color: #ffffff;
     background: rgba(12, 6, 34, 0.878);
@@ -498,7 +498,7 @@ html {
 
 .blog-author-widget h4 {
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.2rem;
     margin-bottom: 0px;
     padding: 0;
     color: color-mix(in srgb, rgb(49, 13, 120), transparent 20%);
@@ -522,5 +522,21 @@ html {
     font-style: italic;
     font-size: 1.1rem;
     color: rgb(49, 13, 120);
-    margin: 10px 0 0 0;
+    margin: 1rem 0 0 0;
+}
+#author-about{
+    font-size: 1.2rem;
+    color: #e6d5fb;
+    font-weight: 400;
+    background-color: #7f6edd;
+    padding: 0.7rem 2rem;
+    width: 100%;
+    text-align: center;
+}
+
+.author-img{
+    width: 100%;
+    height: 130px;
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
