--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -658,7 +658,7 @@
 
             <div class="meta d-flex align-items-center">
               <div class="d-flex align-items-center">
-                <i class="bi bi-person"></i> <span class="ps-2">Ismael ZERBO</span>
+                <i class="bi bi-person"></i> <span class="ps-2">Chantal BONKOUNGOU</span>
               </div>
               <span class="px-3 text-black-50">/</span>
               <div class="d-flex align-items-center">
