--- a/views/news/blog-1.ejs
+++ b/views/news/blog-1.ejs
@@ -344,12 +344,10 @@
 							<!--/Blog Author Widget -->
 							<!-- Blog Author Widget -->
 							<div class="blog-author-widget widget-item">
-
 								<div class="d-flex flex-column align-items-center">
-									<div class="d-flex align-items-center w-100">
-										<img src="https://img.freepik.com/free-vector/smiling-young-man-illustration_1308-174669.jpg"
-											class="rounded-circle flex-shrink-0" alt="">
-										<div>
+									<img  src="https://res.cloudinary.com/dccibzcxp/image/upload/v1733856778/Afro%20Language%20lab/Roger_lwa1rn.png"
+									class="author-img  mb-3  flex-shrink-0" alt="">
+									<div class="d-flex justify-content-around  align-items-center w-100">
 											<h4>Nipomoussi Roger BONZI</h4>
 											<div class="social-links">
 												<a href="https://x.com/#"><i class="bi bi-twitter-x"></i></a>
@@ -359,16 +357,15 @@
 											</div>
 										</div>
 									</div>
+									<p id="author-about">À propos de l'auteur</p>
 									<p>
-										Enseignant d’anglais passionné et dévoué, je mets un point d’honneur à rendre
-										l’apprentissage de la langue accessible, stimulant et enrichissant pour mes
-										élèves. Avec une solide expérience dans l’enseignement secondaire, je suis
-										reconnu pour ma capacité à motiver les apprenants, à concevoir des leçons
+										Enseignant d’anglais passionné et dévoué, il met un point d’honneur à rendre
+										l’apprentissage de la langue accessible, stimulant et enrichissant pour ses
+										élèves. Avec une solide expérience dans l’enseignement secondaire, il est
+										apprecié pour sa capacité à motiver les apprenants, à concevoir des leçons
 										interactives et à adapter mes méthodes pédagogiques aux besoins individuels.
 									</p>
-
 								</div>
-
 							</div>
 
 				<!-- Call to action -->
