--- a/views/news/blog-2.ejs
+++ b/views/news/blog-2.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %>
+<% layout('layouts/blog_boilerplate') %>
  <style>
   .news-background {
    background: url("https://images.pexels.com/photos/1367271/pexels-photo-1367271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
