--- a/views/news/blog-3.ejs
+++ b/views/news/blog-3.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %>
+<% layout('layouts/blog_boilerplate') %>
  <style>
   .news-background {
    background: url("https://images.unsplash.com/photo-1503676382389-4809596d5290?q=80&w=2676&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
