--- a/views/layouts/blog_boilerplate.ejs
+++ b/views/layouts/blog_boilerplate.ejs
@@ -1,39 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="fr">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6E9J2N9N5H"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-6E9J2N9N5H');
-</script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-<link rel="icon" href="/assets/img/ALL.png">
-
-  <!-- Bootstrap Css -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <script src="https://kit.fontawesome.com/9ecb022092.js"></script>
-  <link href="/stylesheets/shared.css" rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Chango&family=Fondamento&family=Kaushan+Script&family=Merriweather:wght@900&family=Ultra&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Rye&family=Titan+One&display=swap"
-    rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700;900&family=Poppins:wght@600;700;800;900&display=swap"
-    rel="stylesheet" />
-  <title>Afro Language Lab</title>
+    <%- head %>
 </head>
-
 <body class="">
   <a class="top-link top-btn-display" href="#"><i class="bi bi-arrow-up-circle-fill"></i></a>
   <%-include('../partials/navbar')%> <%-include('../partials/flash')%>
