--- a/views/news/blog-1.ejs
+++ b/views/news/blog-1.ejs
@@ -1,4 +1,41 @@
 <% layout('layouts/blog_boilerplate') %>
+<head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6E9J2N9N5H"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-6E9J2N9N5H');
+</script>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<meta content="Apprendre l’anglais dès le plus jeune âge: Un cadeau pour l’avenir de vos enfants" name="description">
+	<link rel="stylesheet" href="/assets/css/blog.css">
+
+<link rel="icon" href="/assets/img/ALL.png">
+
+	<!-- Bootstrap Css -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" />
+	<script src="https://kit.fontawesome.com/9ecb022092.js"></script>
+	<link href="/stylesheets/shared.css" rel="stylesheet" />
+	<link
+			href="https://fonts.googleapis.com/css2?family=Chango&family=Fondamento&family=Kaushan+Script&family=Merriweather:wght@900&family=Ultra&display=swap"
+			rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Rye&family=Titan+One&display=swap"
+			rel="stylesheet" />
+	<link
+			href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700;900&family=Poppins:wght@600;700;800;900&display=swap"
+			rel="stylesheet" />
+	<title>Afro Language Lab</title>
+<meta property="og:image" content="https://images.pexels.com/photos/5895034/pexels-photo-5895034.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" />
+</head>
+
 <style>
 
 .news-background {
@@ -18,11 +55,7 @@
     right: 0;
 }
 </style>
-<meta property="og:image" content="https://images.pexels.com/photos/5895034/pexels-photo-5895034.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" />
 
-<meta content="Apprendre l’anglais dès le plus jeune âge: Un cadeau pour l’avenir de vos enfants" name="description">
-
-	<link rel="stylesheet" href="/assets/css/blog.css">
 
 	<body class="blog-details-page">
 		<main class="main">
