--- a/views/news/blog-2.ejs
+++ b/views/news/blog-2.ejs
@@ -1,4 +1,43 @@
-<% layout('layouts/blog_boilerplate') %>
+<!DOCTYPE html>
+<html lang="fr">
+	<head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-6E9J2N9N5H"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() { dataLayer.push(arguments); }
+			gtag('js', new Date());
+
+			gtag('config', 'G-6E9J2N9N5H');
+		</script>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- Page description -->
+<meta property="og:image"
+content="https://images.pexels.com/photos/8730969/pexels-photo-8730969.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" />
+
+<meta content="Sept (07) expressions anglaises indispensables pour briller en milieu professionnel" name="description">
+
+
+		<link rel="stylesheet" href="/assets/css/blog.css">
+		<link rel="icon" href="/assets/img/ALL.png">
+
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+			crossorigin="anonymous" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<script src="https://kit.fontawesome.com/9ecb022092.js"></script>
+		<link href="/stylesheets/shared.css" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Chango&family=Fondamento&family=Kaushan+Script&family=Merriweather:wght@900&family=Ultra&display=swap"
+			rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Rye&family=Titan+One&display=swap"
+			rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700;900&family=Poppins:wght@600;700;800;900&display=swap"
+			rel="stylesheet" />
+		<title>ALL - news</title>
+	
  <style>
   .news-background {
    background: url("https://images.pexels.com/photos/1367271/pexels-photo-1367271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
@@ -24,14 +63,7 @@
    color: rgb(85, 15, 160);
   }
  </style>
-
- <meta property="og:image"
-  content="https://images.pexels.com/photos/8730969/pexels-photo-8730969.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" />
-
- <meta content="Sept (07) expressions anglaises indispensables pour briller en milieu professionnel" name="description">
-
- <link rel="stylesheet" href="/assets/css/blog.css">
-
+  </head>
  <body class="blog-details-page">
   <main class="main">
    <!-- Page Title -->
@@ -445,3 +477,16 @@
    </div>
 
   </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+  integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+  integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous">
+</script>
+<script src="/javascripts/shared.js"></script>
+<!--aos animation-->
+</script>
+</body>
+
+</html>
