navabar in blog article

--- a/views/news/blog-2.ejs
+++ b/views/news/blog-2.ejs
@@ -66,6 +66,9 @@ content="https://images.pexels.com/photos/8730969/pexels-photo-8730969.jpeg?auto
   </head>
  <body class="blog-details-page">
   <main class="main">
+    <a class="top-link top-btn-display" href="#"><i class="bi bi-arrow-up-circle-fill"></i></a>
+		<%-include('../partials/navbar')%> <%-include('../partials/flash')%>
+
    <!-- Page Title -->
    <div class="page-title news-background" data-aos="fade">
     <div class="container position-relative">
