--- a/public/assets/css/blog.css
+++ b/public/assets/css/blog.css
@@ -15,7 +15,6 @@ html {
 .CTA-card {
     position: relative;
     /* max-width: 640px; */
-    
     margin: auto;
     margin: 60px 0;
     /* height: 270px; */
@@ -43,51 +42,101 @@ html {
     font-weight: 700;
 }
 
-.btn-cta{
-  align-items: center;
-  appearance: none;
-  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
-  border: 0;
-  border-radius: 6px;
-  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-flex;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow,transform;
-  font-size: 15px;
+.btn-cta {
+    align-items: center;
+    appearance: none;
+    background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+    border: 0;
+    border-radius: 6px;
+    box-shadow: rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, rgba(58, 65, 111, .5) 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-flex;
+    height: 48px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s, transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow, transform;
+    font-size: 15px;
 }
 
 .btn-cta:focus {
-  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-  color: #fff;
+    box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+    color: #fff;
 }
 
 .btn-cta:hover {
-  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-  transform: translateY(-2px);
-  color: #fff;
+    box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+    transform: translateY(-2px);
+    color: #fff;
 }
+
 .btn-cta:active {
-  box-shadow: #3c4fe0 0 3px 7px inset;
-  transform: translateY(2px);
-  color: #fff;
+    box-shadow: #3c4fe0 0 3px 7px inset;
+    transform: translateY(2px);
+    color: #fff;
 }
+
+/* CSS */
+.btn-blog-video {
+    align-items: center;
+    background: #4776E6;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #8E54E9, #4776E6);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #ffffffd1;
+    display: flex;
+    /* font-family: Phantomsans, sans-serif; */
+    font-size: 0.7rem;
+    justify-content: center;
+    line-height: 1em;
+    /* max-width: 100%; */
+    min-width: 140px;
+    padding: 1rem 1.2rem;
+    width: 100%;
+    margin: 2rem 1rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.btn-blog-video:active,
+.btn-blog-video:hover {
+    outline: 0;
+    background: #170454;
+     /* fallback for old browsers */
+     background: -webkit-linear-gradient(to left, #8E54E9, #4776E6);
+     /* Chrome 10-25, Safari 5.1-6 */
+     background: linear-gradient(to left, #8E54E9, #4776E6);
+}
+
+@media (min-width: 768px) {
+    .btn-blog-video {}
+}
+
 
 /*--------------------------------------------------------------
 # Global Page Titles & Breadcrumbs
@@ -524,7 +573,8 @@ html {
     color: rgb(49, 13, 120);
     margin: 1rem 0 0 0;
 }
-#author-about{
+
+#author-about {
     font-size: 1.2rem;
     color: #e6d5fb;
     font-weight: 400;
@@ -534,7 +584,7 @@ html {
     text-align: center;
 }
 
-.author-img{
+.author-img {
     width: 100%;
     height: 130px;
     border-radius: 50%;
